--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "cookies-next": "^5.0.2",
     "next": "15.1.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
